--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <body>
   <div id="pizza-restaurant" class="container-fluid h-100">
+    <image v-bind:src="image">
+    <link :href="url">w
     <div class="row h-100">
       <div class="col-9 p-4">
         <div class="text-center title-holder">
@@ -100,4 +102,4 @@
 
 </body>
 
-</html>
+</html> 
